Source/WebKit/mac/WebView/WebPreferencesPrivate.h
@@ -483,5 +483,6 @@ extern NSString *WebPreferencesCacheModelChangedInternalNotification;
 
 @property (nonatomic) BOOL javaScriptMarkupEnabled;
 @property (nonatomic) BOOL mediaDataLoadsAutomatically;
+@property (nonatomic) BOOL attachmentElementEnabled;
 
 @end
